ambassador/tests/012-xfp-redirect-false/gold.json
{
  "listeners": [
    
    {
      "address": "tcp://0.0.0.0:80",
      
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {"codec_type": "auto",
            "stat_prefix": "ingress_http",
            "use_remote_address": true,
            "access_log": [
              {
                "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                "path": "/dev/fd/1"
              }
            ],
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],"routes": [
                    
                    {
                      "timeout_ms": 10000,"prefix": "/ambassador/v0/check_ready","prefix_rewrite": "/ambassador/v0/check_ready","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 10000,"prefix": "/ambassador/v0/check_alive","prefix_rewrite": "/ambassador/v0/check_alive","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 10000,"prefix": "/ambassador/v0/","prefix_rewrite": "/ambassador/v0/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/httpbin/","prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_httpbin_org", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    
                    
                  ]
                }
              ]
            },
            "filters": [
              {
                "name": "cors",
                "config": {}
              },{"type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "address": "tcp://127.0.0.1:8001",
    "access_log_path": "/tmp/admin_access_log"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "cluster_127_0_0_1_8877",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://127.0.0.1:8877"
          }
          
        ]},
      {
        "name": "cluster_httpbin_org",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://httpbin.org:80"
          }
          
        ]}
      
    ]
  }
}
